--- a/index.html
+++ b/index.html
@@ -1,118 +1,121 @@
 <!DOCTYPE html>
 <html lang="th">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>ครบรอบ 3 ปี 💖</title>
-  <style>
-    body {
-      font-family: 'Sarabun', sans-serif;
-      background: #fff0f5;
-      color: #b30059;
-      text-align: center;
-      padding: 30px;
-    }
-    h1 {
-      font-size: 3em;
-      margin-bottom: 0.3em;
-    }
-    .heart {
-      font-size: 2em;
-      animation: heartbeat 1s infinite;
-    }
-    @keyframes heartbeat {
-      0%, 100% { transform: scale(1); }
-      50% { transform: scale(1.2); }
-    }
-    .message {
-      font-size: 1.3em;
-      margin: 20px 0;
-      line-height: 1.6;
-    }
-    .gallery {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      gap: 15px;
-      margin-top: 30px;
-    }
-    .gallery img {
-      width: 100%;
-      height: auto;
-      border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
-      transition: transform 0.3s;
-    }
-    .gallery img:hover {
-      transform: scale(1.05);
-    }
-    button {
-      padding: 10px 20px;
-      font-size: 1em;
-      background-color: #ff6699;
-      border: none;
-      color: white;
-      border-radius: 8px;
-      cursor: pointer;
-      margin-top: 20px;
-    }
-    button:hover {
-      background-color: #e6005c;
-    }
-
-    iframe {
-      margin-top: 30px;
-      border-radius: 12px;
-      width: 100%;
-      max-width: 560px;
-      height: 315px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.3);
-    }
-  </style>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>วันครบรอบ 3 ปี</title>
+<style>
+  body {
+    font-family: "Sarabun", sans-serif;
+    background: #f0f0f0;
+    margin: 0; padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+  }
+  .slideshow-container {
+    width: 600px;
+    max-width: 90vw;
+    position: relative;
+    overflow: hidden;
+    border-radius: 15px;
+    box-shadow: 0 4px 15px rgba(0,0,0,0.2);
+    background: white;
+  }
+  .slides {
+    display: flex;
+    transition: transform 0.6s ease-in-out;
+    width: 100%;
+  }
+  .slides img {
+    width: 600px;
+    max-width: 90vw;
+    border-radius: 15px;
+    user-select: none;
+  }
+  /* ปุ่มลูกศร */
+  .arrow {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 2.5rem;
+    color: rgba(0,0,0,0.4);
+    cursor: pointer;
+    user-select: none;
+    padding: 5px 10px;
+    border-radius: 50%;
+    background-color: rgba(255,255,255,0.8);
+    transition: color 0.3s ease;
+  }
+  .arrow:hover {
+    color: #111;
+  }
+  .arrow-left {
+    left: 10px;
+  }
+  .arrow-right {
+    right: 10px;
+  }
+</style>
 </head>
 <body>
 
-  <h1>🎉 ครบรอบ 3 ปี 🎉</h1>
-  <div class="heart">❤️❤️❤️</div>
-
-  <div class="message" id="message">
-    ขอบคุณสำหรับ 3 ปีที่แสนวิเศษ<br>
-    ขอบคุณที่อยู่ด้วยกันมาตลอด 💕
+<div class="slideshow-container">
+  <div class="slides" id="slides">
+    <img src="f/IMG_8657.jpg" alt="รูป1" />
+    <img src="f/IMG_8658.jpg" alt="รูป2" />
+    <img src="f/IMG_8659.jpg" alt="รูป3" />
+    <img src="f/IMG_8660.jpg" alt="รูป4" />
+    <img src="f/IMG_8661.jpg" alt="รูป5" />
+    <img src="f/IMG_8662.jpg" alt="รูป6" />
+    <img src="f/IMG_8663.jpg" alt="รูป7" />
+    <img src="f/IMG_8664.jpg" alt="รูป8" />
+    <img src="f/IMG_8665.jpg" alt="รูป9" />
+    <img src="f/IMG_0721.jpg" alt="รูป10" />
   </div>
+  <div class="arrow arrow-left" id="prev">&#10094;</div>
+  <div class="arrow arrow-right" id="next">&#10095;</div>
+</div>
 
-  <button onclick="showMore()">คลิกเพื่อดูข้อความพิเศษ</button>
+<script>
+  const slides = document.getElementById('slides');
+  const images = slides.querySelectorAll('img');
+  const total = images.length;
+  let index = 0;
 
-  <!-- อัลบั้มรูป -->
-  <div class="gallery">
-    <img src="รูป1.jpg" alt="ภาพที่ 1">
-    <img src="รูป2.jpg" alt="ภาพที่ 2">
-    <img src="รูป3.jpg" alt="ภาพที่ 3">
-    <img src="รูป4.jpg" alt="ภาพที่ 4">
-    <img src="รูป5.jpg" alt="ภาพที่ 5">
-    <img src="รูป6.jpg" alt="ภาพที่ 6">
-    <img src="รูป7.jpg" alt="ภาพที่ 7">
-    <img src="รูป8.jpg" alt="ภาพที่ 8">
-    <img src="รูป9.jpg" alt="ภาพที่ 9">
-    <img src="รูป10.jpg" alt="ภาพที่ 10">
-  </div>
+  function showSlide(i) {
+    if (i < 0) index = total - 1;
+    else if (i >= total) index = 0;
+    else index = i;
+    slides.style.transform = `translateX(${-index * 100}%)`;
+  }
 
-  <!-- เพลงประกอบ (YouTube embed) -->
-  <iframe 
-    src="https://www.youtube.com/embed/vJS4sG3nl8Y?autoplay=1&loop=1&playlist=vJS4sG3nl8Y" 
-    title="รักเธอทั้งหมดของหัวใจ - Pause" 
-    allow="autoplay; encrypted-media" 
-    allowfullscreen>
-  </iframe>
+  // ปุ่มลูกศร
+  document.getElementById('prev').addEventListener('click', () => {
+    showSlide(index - 1);
+    resetTimer();
+  });
+  document.getElementById('next').addEventListener('click', () => {
+    showSlide(index + 1);
+    resetTimer();
+  });
 
-  <script>
-    function showMore() {
-      document.getElementById("message").innerHTML = `
-        ขอบคุณที่เดินเคียงข้างกันมาตลอด 3 ปีนี้<br>
-        เราผ่านทั้งรอยยิ้ม น้ำตา และช่วงเวลาพิเศษมาด้วยกัน<br>
-        ขอให้ความรักของเราเติบโต แข็งแรง และสวยงามยิ่งขึ้นในทุกๆ วัน 💖<br>
-        รักคุณเสมอ 💑
-      `;
-    }
-  </script>
+  // สไลด์อัตโนมัติทุก 3 วินาที
+  let timer = setInterval(() => {
+    showSlide(index + 1);
+  }, 3000);
+
+  function resetTimer() {
+    clearInterval(timer);
+    timer = setInterval(() => {
+      showSlide(index + 1);
+    }, 3000);
+  }
+
+  // เริ่มแสดงรูปแรก
+  showSlide(0);
+</script>
 
 </body>
 </html>
