--- a/index.html
+++ b/index.html
@@ -60,7 +60,19 @@
 </style>
 </head>
 <body>
-
+<div style="max-width: 300px; margin: 40px auto; font-family: 'Sarabun', sans-serif; text-align: center; color: #b30059;">
+  <img 
+    src="https://api.qrserver.com/v1/create-qr-code/?size=250x250&data=https://010191.github.io/anniversary-3years/" 
+    alt="QR Code"
+    style="border-radius: 15px; box-shadow: 0 4px 12px rgba(179,0,89,0.3);"
+  />
+  <p style="margin-top: 20px; font-size: 16px; line-height: 1.5; white-space: pre-line;">
+    ขอบคุณที่เดินเคียงข้างกันมาตลอด 3 ปีนี้
+    เราผ่านทั้งรอยยิ้ม น้ำตา และช่วงเวลาพิเศษมาด้วยกัน
+    ขอให้ความรักของเราเติบโต แข็งแรง และสวยงามยิ่งขึ้นในทุกๆ วัน 💖
+    รักคุณแฟนเสมอ 💑
+  </p>
+</div>
 <div class="slideshow-container">
   <div class="slides" id="slides">
     <img src="f/IMG_8657.jpg" alt="รูป1" />
